upgrade sequelize to secure version

--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.9.2"
+    "sequelize": ">= 5.15.1"
   }
 }
